Add convenience methods to UserUtil since EHCache returns a reference to the object making it so that any changes to the object are stored in the cache